# A2A_Agent_to_Agent_Protocol

./: .env  .gitignore  pyproject.toml
A2A_MultiAgent/Friend1/: Agent.py  Agent_Executor.py  main.py
A2A_MultiAgent/Friend2/: Agent.py  Agent_Executor.py  main.py
A2A_MultiAgent/Friend3/: Agent.py  Agent_Executor.py  main.py
A2A_MultiAgent/Host_Agent/: agent.py
A2A_Simple/: Agent_Executor.py  Test_Client.py  main.py
